--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
-spring.application.name=RepartitionMicroservice
-server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/repartition_db
-spring.datasource.username=root
-spring.datasource.password=root
+spring.application.name=Gestion-Repartition-Microservice
+server.port=8083
+spring.datasource.url=jdbc:h2:mem:Repartition;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+
+spring.datasource.username=sa
+spring.datasource.password=password
+
+spring.datasource.driverClassName=org.h2.Driver
+
+spring.datasource.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+
+spring.h2.console.settings.web-allow-others=false
